[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Characters/builder/idle/Sprite-0003.png" type="Texture" id=1]
[ext_resource path="res://Images/Characters/builder/idle/Sprite-0002.png" type="Texture" id=2]
[ext_resource path="res://builder.gd" type="Script" id=3]
[ext_resource path="res://WalkCode.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 0.5
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 15.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
light_mask = 0
input_pickable = true
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 3 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
z_index = 1
shape = SubResource( 2 )

[node name="WalkCode" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2D_mouse_exited"]
